Fix spacing

--- a/client/stylesheets/css/global/channel.css
+++ b/client/stylesheets/css/global/channel.css
@@ -14,7 +14,7 @@ img.historyQ {
     width: 200px;
     height: 110px;
     object-fit: cover;
-    margin-bottom:10px;
+    margin:0px 1px 10px 1px;
     border-radius: 8px;
 
     
